Refrence Image reflects object after source got deleted #79494

Closed
opened 2020-08-03 22:54:37 +02:00 by Julian Mohr · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-03 19:33, hash: 452b896f2d
Worked: (2.83 default pink texture)

Short description of error
Refrence Images reflecting objects after source got deleted or path changed.

Exact steps for others to reproduce the error
Based on default cube add a ref image per drag& drop and save it.
Close blender and change path of the image.
Open blender again.
2020-08-03 22-15-29.mp4

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-03 19:33, hash: `452b896f2d` Worked: (2.83 default pink texture) **Short description of error** Refrence Images reflecting objects after source got deleted or path changed. **Exact steps for others to reproduce the error** Based on default cube add a ref image per drag& drop and save it. Close blender and change path of the image. Open blender again. [2020-08-03 22-15-29.mp4](https://archive.blender.org/developer/F8742406/2020-08-03_22-15-29.mp4)
Author

Added subscriber: @Jewls

Added subscriber: @Jewls
Author

could be useful for thumbnail creation for the asset manager^^

could be useful for thumbnail creation for the asset manager^^

Added subscribers: @fclem, @ideasman42

Added subscribers: @fclem, @ideasman42

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

@fclem, this looks to be a regression in recent GPU/image refactoring since it's not an issue in the 2.90 branch. image_gpu_texture_error_create returns an image with a bindcode of 0, that draws pink in 2.90 but draws the current viewport in master.

This can be worked around by checking the size is zero before clamping to 1, however it should be made to work like 2.90.

@fclem, this looks to be a regression in recent GPU/image refactoring since it's not an issue in the 2.90 branch. `image_gpu_texture_error_create` returns an image with a bindcode of 0, that draws pink in 2.90 but draws the current viewport in master. This can be worked around by checking the `size` is zero before clamping to 1, however it should be made to work like 2.90.

This issue was referenced by 999667a8c5

This issue was referenced by 999667a8c5f6746ff84f269977d4abb8a20f33b5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-08-25 19:25:56 +02:00
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:21:41 +01:00
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#79494
No description provided.