Fix T79494 Refrence Image reflects object after source got deleted

Silly typo was causing the error texture to not be bound.